--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>dev.danvega</groupId>
-		<artifactId>mcps-parent</artifactId>
+		<artifactId>mcp-security-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
