--- a/authorization-server-google/src/main/resources/application.yml
+++ b/authorization-server-google/src/main/resources/application.yml
@@ -2,22 +2,24 @@ spring:
   application:
     name: authorization-server
 
-  # GitHub OAuth2 configuration for federated login
-  # Create GitHub OAuth App at: https://github.com/settings/developers
-  # Authorization callback URL: http://localhost:9000/login/oauth2/code/github
+  # Google OAuth2 configuration for federated login
+  # Create Google OAuth App at: https://console.cloud.google.com/auth/clients
+  # Authorization callback URL: http://localhost:9000/login/oauth2/code/google
   security:
     oauth2:
       client:
         registration:
-          github:
-            client-id: ${GITHUB_CLIENT_ID}
-            client-secret: ${GITHUB_CLIENT_SECRET}
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
             scope:
-              - read:user
-              - user:email
+              - openid
+              - email
+              - profile  # optional but common
         provider:
-          github:
-            user-name-attribute: login
+          google:
+            #user-name-attribute: sub
+            user-name-attribute: email
 
       # Authorization Server configuration
       authorizationserver:
